Added a image and some elements

--- a/Warrior-of-light.html
+++ b/Warrior-of-light.html
@@ -1,3 +1,14 @@
-<h1>A glimmer of hope among the deepest of despair</h1>
-<p>Paragraph placement I guess? </p>
-<a href="https://google.com" target="_blank" title="Let's go to google!">Click me!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>A glimmer of hope among the deepest of despair</h1>
+	<p><b>Paragraph</b> placement I guess? </p>
+	<a href="https://google.com" target="_blank" title="Let's go to google!">Click me!</a>
+	<p>My name is:<br>
+	Layla Skylance</p>
+	<img src="img/Warrior-of-light-1.png">
+</body>
+</html>
